--- a/index.html
+++ b/index.html
@@ -15,9 +15,24 @@
         font-family: 'Inter', sans-serif;
         background-color: #030712;
         margin: 0;
+        color: #f3f4f6;
       }
       code, pre, .font-mono {
         font-family: 'JetBrains Mono', monospace;
+      }
+      /* Custom scrollbar for better aesthetics */
+      ::-webkit-scrollbar {
+        width: 8px;
+      }
+      ::-webkit-scrollbar-track {
+        background: #030712;
+      }
+      ::-webkit-scrollbar-thumb {
+        background: #1f2937;
+        border-radius: 4px;
+      }
+      ::-webkit-scrollbar-thumb:hover {
+        background: #374151;
       }
     </style>
   <script type="importmap">
@@ -36,6 +51,7 @@
 </head>
   <body>
     <div id="root"></div>
+    <!-- Vite will automatically bundle this and inject the correct script tag during build -->
     <script type="module" src="/index.tsx"></script>
   </body>
 </html>
